# meeseeks

./: README.md  flake.nix
scripts/: init-fullstack.sh  init-haskell.sh
templates/fullstack/: .gitignore  flake.nix  justfile
templates/fullstack/.agents/skills/parse-dont-validate/: SKILL.md
templates/fullstack/.agents/skills/test-driven-development/: testing-anti-patterns.md
templates/fullstack/.agents/skills/three-layer-cake/: SKILL.md
templates/fullstack/.claude/skills/: three-layer-cake  type-driven-development
templates/fullstack/backend/: CHANGELOG.md  rambutan.cabal
templates/fullstack/backend/app/: Main.hs
templates/fullstack/backend/src/: Rambutan.hs
templates/fullstack/backend/test/Rambutan/: RambutanSpec.hs
templates/fullstack/frontend/: bs-config.js  index.html  package.json  spago.dhall
templates/fullstack/frontend/src/: Main.purs
templates/fullstack/frontend/src/App/: Root.purs
templates/fullstack/frontend/src/App/Capability/: Api.purs
templates/fullstack/frontend/test/: Main.purs
templates/haskell/: .gitignore  CHANGELOG.md  flake.nix  fourmolu.yaml  justfile  rambutan.cabal
templates/haskell/.agents/skills/test-driven-development/: SKILL.md
templates/haskell/.agents/skills/total-depravity/: SKILL.md
templates/haskell/.agents/skills/type-driven-development/: SKILL.md
templates/haskell/.claude/skills/: parse-dont-validate  total-depravity
templates/haskell/app/: Main.hs
templates/haskell/src/: Rambutan.hs
templates/haskell/test/Rambutan/: RambutanSpec.hs
